# agentropolis

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  PLAN.md  README.md  alembic.ini  docker-compose.multi-agent.yml  docker-compose.yml  pyproject.toml
.github/: README.md  issue_abuse_budget_guard.md  issue_agent_svc.md  issue_api_agent_world.md  issue_api_game.md  issue_api_market_inventory.md  issue_api_production_company.md  issue_api_social_transport.md  issue_authorization_tool_scopes.md  issue_cli_alembic.md  issue_company_svc.md  issue_consumption.md  issue_contract_parity_tests.md  issue_control_contract_baseline.md  issue_economy_governance.md  issue_events_currency.md  issue_execution_semantics_jobs.md  issue_foundation.md  issue_game_engine.md  issue_guild_diplomacy.md  issue_inventory_svc.md  issue_leaderboard.md  issue_market_engine.md  issue_mcp_tools.md  issue_observability_baseline.md  issue_production.md  issue_skill_svc.md  issue_state_recovery.md  issue_tests.md  issue_transport_tax_shop.md  issue_world_svc.md
alembic/: env.py
docs/: execution-model.md  local-preview-rollout.md  recovery-runbook.md
examples/: mcp_agent_claude.md  simple_agent.py  smart_trader.py
openclaw/: README.md  agent-template.yaml  bootstrap.example.env  fleet-template.yaml
prompts/: agent-brain.md
scripts/: __init__.py  build_review_bundle.py  check_rollout_gate.py  export_alert_snapshot.py  export_contract_snapshot.py  export_execution_snapshot.py  export_governance_snapshot.py  export_issue_sync_manifest.py  export_observability_snapshot.py  export_recovery_plan.py  export_rollout_readiness.py  export_world_snapshot.py  monitor_agents.py  register_agents.py  repair_derived_state.py  replay_housekeeping.py
tests/: conftest.py  test_alerts.py  test_authorization_scopes.py  test_autonomy_core.py  test_baseline_runtime.py  test_carry_capacity.py  test_concurrency.py  test_consumption.py  test_contract_parity.py  test_control_contract.py  test_direct_trade_and_reputation.py  test_economy_convergence.py  (+26 more)
(+166 files in other folders)
